--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<script src="/scripts/infiniteBlogs.js"></script>
+<script src="/scripts/blog/infiniteBlogs.js"></script>
 <div class="container container-blog" id="container-blog">
   <% if(locals.blogs){ %>
     <% Object.keys(locals.blogs).forEach(function (index) { %>
