--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<script src="/scripts/infiniteShops.js"></script>
+<script src="/scripts/shop/infiniteShops.js"></script>
 <script src="/scripts/cart.js"></script>
 <div class="container-fluid">
     <div class="container">
@@ -58,22 +58,8 @@
       </div>
     </div>
 </div>
-<script>
-    function expand(image){
-      let expand = $("#expandImg");
-      expand.src = image.src;
-      expand.attr("src", image.src);
-    }
-    function openTab(tabName) {
-      let tab = document.getElementsByClassName("tab");
-      for (let i = 0; i < tab.length; i++) {
-        tab[i].style.display = "none";  
-      }
-      document.getElementById(tabName).style.display = "grid";
-      document.getElementById("load").setAttribute("onclick", `infiniteShopItems("${tabName}");`);
-    }
-</script>
-  
+
+<script src="/scripts/shop/shopScripts.js"></script>
 <% include partials/footer %>
 
 <a class="lightbox-close" href="#close">
