--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -31,43 +31,7 @@
         </form>
     </div>
     
-    <script>
-        async function postShop(e) {
-            e.preventDefault();
-            let title = $("#title").val(),
-                content = $("#content").val(),
-                price = $("#price").val(),
-                isUnique = $("#isUnique").is(":checked"),
-                img = document.querySelector('#img'),
-                formData = new FormData();
-            
-            for (i = 0; i < img.files.length; i++) 
-                formData.append('img', img.files[i]);
-
-            formData.append('title', title);
-            formData.append('content', content);
-            formData.append('price', price);
-            formData.append('isUnique', isUnique);
-            
-            fetch('/api/shop/post', {
-                method: 'post',
-                mode: 'same-origin',
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.err) {
-                    let alert = `
-                    <div id="alert" class="alert alert-warning" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-                        ${data.msg}
-                    </div>`;
-                    addAlert(alert, "#header")
-                } else 
-                    window.location.href = data.url                
-            })
-        }
-    </script>
+    <script src="/scripts/shop/shopScripts.js"></script>
     <script src="/scripts/frontValidation.js"></script>
     <script src="/scripts/formFocus.js"></script>
 </div>
