--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -30,15 +30,10 @@
     <% } %>
   </div>
 </div>
+
+<script src="/scripts/gallery/galleryScripts.js"></script>
 <script src="/scripts/frontValidation.js"></script>
 <script src="/scripts/formFocus.js"></script>
-<script>
-    function expand(image){
-      let expand = $("#expandImg");
-      expand.src = image.src;
-      expand.attr("src", image.src);
-    }
-</script>
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
     <img id="expandImg" src="/api/image/<%= locals.img[0]._id %>"/>
