--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -10,9 +10,12 @@
           <h3 class="blog-title"><%= locals.blogs.title %></h3> 
           <p class="blog-info">posté par 
             <b class="blog-author"><%= locals.blogs.author %></b>, <i class="blog-date"><%= locals.blogs.date %></i>
-              <% if (locals.level && locals.level > 1) { %>
-                <a href="/Admin/Blog/Patch/<%= locals.blogs._id %>"><i class="fas fa-edit"></i></a>
-              <% } %>  
+            <% if (locals.img) { %>
+              <img src="/api/image/<%= locals.img[0]._id %>">
+            <% } %>  
+            <% if (locals.level && locals.level > 1) { %>
+              <a href="/Admin/Blog/Patch/<%= locals.blogs._id %>"><i class="fas fa-edit"></i></a>
+            <% } %>  
           </p>
           <p class="blog-content"><%= locals.blogs.content %></p>
         </div>
