--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="form-container blog-form">
-        <form id="blog" method="POST" action="/api/blog/patch/<%= locals.blogContent.id %>">
+        <form id="blog" method="POST" action="/api/blog/patch/<%= locals.blogContent.id %>" enctype="multipart/form-data">
             <h1 class="form-title">Editer un post de blog</h1>
             <div class="txtb">
                 <input id="title" type="text" name="title" value="<%= locals.blogContent.title %>" onkeyup="Validate.String(this, 4, 256);" required>
@@ -18,10 +18,10 @@
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
                         <img id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
-                            <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
-                                <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
-                                <a id="sel<%= item._id %>" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Blog/<%= locals.blogContent.id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
-                            </div>
+                        <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
+                            <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
+                            <a id="sel<%= item._id %>" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Blog/<%= locals.blogContent.id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
+                        </div>
                     <% }) %>
                 <% } %>
             </div>
@@ -33,6 +33,7 @@
             <input type="submit" class="delbtn" value="DELETE" id="delete-blog">
         </form>
     </div>
+    <script src="/scripts/blog/blogScripts.js"></script>
     <script src="/scripts/frontValidation.js"></script>
     <script src="/scripts/formFocus.js"></script>
 </div>
