--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -1,9 +1,21 @@
 <% include partials/head %>
 
 <script src="/scripts/gallery/infiniteGalleriesTags.js"></script>
+<script src="/scripts/bootstrap-tagsinput.js"></script>
 <script src="/scripts/cart.js"></script>
 <div class="container">
     <div class="container-gallery" id="container-gallery">
+        
+        <form id="tags" method="GET" action="/Galerie/tags" onsubmit="filterByTags(event)"> 
+            <div class="form-group">
+                <label>filter by tags</label>
+                <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" class="form-control">
+                <span data-placeholder="Tags"></span>
+            </div>
+
+            <input type="submit" class="logbtn" value="Filter" id="submit-tags">
+        </form>
+
           <% if(locals.galleries){ %>
             <% Object.keys(locals.galleries).forEach(function (index) { %>
               <div class="card" id="<%= locals.galleries[index]._id %>">
@@ -22,15 +34,27 @@
           <% } %>
     </div>
     <div class="col-6 offset-3 mb-3 mt-3">
-      <input type="submit" class="logbtn" value="Load more" onclick="infiniteGalleries();">
+      <input type="submit" class="logbtn" value="Load more" onclick="infiniteGalleriesTags();">
     </div>
 </div>
 
-<script src="/scripts/gallery/galleryScripts.js"></script>
-<% include partials/footer %>
+<script>
+    let tagInput = $("#tagInput");
+    let tags = "<%= locals.tags %>";
+    tags = tags.split(',')
 
+    tagInput.tagsinput('add', "");
+    for (i = 0; i < tags.length; i++)
+        tagInput.tagsinput('add', tags[i]);
+</script>
+
+<script src="/scripts/gallery/galleryScripts.js"></script>
 <a class="lightbox-close" href="#close">
-  <div class="lightbox-target" id="expand">
-    <img id="expandImg" src="/api/image/<%= locals.galleries[0].mainImgId %>"/>
-  </div>
+    <div class="lightbox-target" id="expand">
+        <% if(locals.galleries){ %>
+            <img id="expandImg" src="/api/image/<%= locals.galleries[0].mainImgId %>"/>
+        <% } %>
+    </div>
 </a>
+
+<% include partials/footer %>
