--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -18,14 +18,14 @@
       <% Object.keys(locals.products).forEach(function (index) { %>
         <div class="cart-row cart-row-item" id="<%= locals.products[index].item._id %>">
           <div class="cart-item cart-column">
-            <img class="cart-img" src="/api/shop/image/<%= locals.products[index].item._id %>" alt="<%= locals.products[index].item.title %>">
+            <img class="cart-img" src="/api/image/main/Shop/<%= locals.products[index].item._id %>" alt="<%= locals.products[index].item.title %>">
             <div class="cart-title-description">
               <h4 class="cart-item-title"><b><%= locals.products[index].item.title %></b></h4>
               <p class="cart-item-description"><%= locals.products[index].item.content %></p>
             </div>
           </div>
               
-          <div class="cart-price cart-column ">
+          <div class="cart-price cart-column">
             <p class="cart-item-price"><b><%= locals.products[index].price %>€</b></p>
           </div>
               
@@ -40,16 +40,6 @@
       </div>
       <% }) %>
     <% } %>
-     <!--<div class="cart-total">
-      <% if(locals.totalPrice){ %>
-          TOTAL PRICE: <b id="total-price"><%= locals.totalPrice %>€</b>
-      <% } %>
-      <% if(locals.totalQty){ %>
-          NUMBER OF ITEMS: <b id="total-qty"><%= locals.totalQty %></b><br/>
-      <% } %>
-      <input type="hidden" id="total-price-input" value="<%= locals.totalPrice %>">
-      <button class="btn btn-primary btn-purchase" onclick="submitCheckout();" type="button">PURCHASE</button>
-    </div>-->
 
     <% if(locals.isDelivery){ %>
       <div class="panel-heading">
@@ -115,7 +105,6 @@
       NUMBER OF ITEMS: <b id="total-qty"><%= locals.totalQty %></b><br/>
     <% } %>
     <% if(locals.totalPrice){ %>
-      <input type="hidden" id="total-price-input" value="<%= locals.totalPrice %>">
       <button class="btn btn-primary btn-purchase" onclick="submitCheckout();" type="button">PURCHASE</button>
     <% } %>
   </div>
