--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -6,7 +6,7 @@
         <% if (locals.order) { %>
             <h1>order</h1>
             _id: <%= locals.order._id %><br />
-            total_price: <%= locals.order.price %><br />
+            total_price: <%= locals.order.price %>€<br />
             status: <%= locals.order.status %><br />
             _userId: <%= locals.order._userId %><br />
             <hr />
@@ -19,7 +19,7 @@
                     <% Object.keys(locals.order.items).forEach(function (index) { %>
                       <div class="cart-row cart-row-item" id="<%= locals.order.items[index].item._id %>">
                         <div class="cart-item cart-column">
-                            <a href="/Shop/<%= locals.order.items[index].item._id %>"><img class="cart-img" src="/api/shop/image/<%= locals.order.items[index].item._id %>" alt="<%= locals.order.items[index].title %>"></a>
+                            <a href="/Shop/<%= locals.order.items[index].item._id %>"><img class="cart-img" src="/api/image/main/Shop/<%= locals.order.items[index].item._id %>" alt="<%= locals.order.items[index].title %>"></a>
                           <div class="cart-title-description">
                             <h4 class="cart-item-title"><b><%= locals.order.items[index].title %></b></h4>
                             <p class="cart-item-description"><%= locals.order.items[index].content %></p>
