--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -28,7 +28,7 @@
             
             <div class="form-group">
                 <label>price</label>
-                <input type="number" min="1" step="any" id="price" name="price" value="<%= locals.shop.price %>" required>
+                <input type="number" min="1" id="price" name="price" value="<%= locals.shop.price %>" step=".01" required>
             </div>
             <div class="form-group">
                 <label>check if this is an unique item</label>
