--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -20,7 +20,7 @@
             
             <div class="form-group">
                 <label>price</label>
-                <input type="number" min="1" step="any" id="price" name="price" required>
+                <input type="number" min="1" id="price" name="price" step=".01" required>
             </div>
             <div class="form-group">
                 <label>check if this is an unique item</label>
