--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -1,11 +1,8 @@
 <% include partials/head %>
 
 <script src="https://checkout.stripe.com/checkout.js" ></script>
+<script>const stripePublicKey = '<%= locals.stripePublicKey %>';</script>
 <script src="/scripts/cart.js"></script>
-<script>
-  const stripePublicKey = '<%= locals.stripePublicKey %>';
-</script>
-<!--<script src="scripts/store.js"></script>-->
 
 <div class="container"> 
   <div class="container-cart">
@@ -34,84 +31,10 @@
             <% if (locals.products[index].item.isUnique === true) { %>
               <h4 class="cart-item-qty"><b><%= locals.products[index].qty %></b></h4>
             <% } else { %>
-              <input id="qty-<%= locals.products[index].item._id %>" class="cart-item-qty" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only"  onchange="checkValue(event, this)">
+              <input id="qty-<%= locals.products[index].item._id %>" class="cart-item-qty" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only"  onchange="updateValue(event, this)">
               <!-- step="1" min="0" ou 1 max="99" onkeydown="return false; type="number" pattern="[0-9]""-->
               <i class="fas fa-plus fa-2x qty-update qty-increase" min="0" onclick="cartAdd('<%= locals.products[index].item._id %>', this)"></i>
             <% } %>
-            <script>
-              async function checkValue(e, item) {
-                try {
-                  if (item.value) {
-                    let value = parseInt(item.value);
-                    if (Number.isInteger(value) && value >= 0) {
-                      let itemId = item.id.substring(4);
-                      await fetch(`http://localhost:8089/api/cart/update/${itemId}/${value}`, {
-                        method: 'GET',
-                        headers: {
-                          'Content-Type': 'application/json',
-                          'Accept': 'application/json'
-                        },
-                        credentials: "include",
-                        mode: "same-origin"
-                      })
-                      .then((res) => {return res.json()})
-                      .then(function(response) {
-                        console.log("response:", response)
-                        let alertType = "info";
-                        if (response.error === false) {
-                          let totalQty = response.cart.totalQty;
-                          let totalPrice = response.cart.totalPrice;
-                          let rowId = document.getElementById(itemId);
-
-                          document.getElementById("total-price").innerText = totalPrice + "€"; //format here or in api
-                          document.getElementById("total-qty").innerText = totalQty;
-
-                          if (value === 0) 
-                            document.getElementById(itemId).remove();
-                          else {
-                            if (!rowId.classList.contains("card")) {
-                              let itemQty = response.cart.items[itemId].qty;
-                              let itemPrice = response.cart.items[itemId].price;
-
-                              item.value = itemQty;
-                              rowId.childNodes[3].childNodes[1].childNodes[0].innerText = itemPrice + "€";
-                            }
-                          }
-                        }
-                        else {
-                          console.log("API answered with error:", response)
-                          alertType = "warning";
-                        }
-                        let alert = `<div id="alert" class="alert alert-${alertType}" role="alert">
-                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-                                        ${response.msg}
-                                      </div>`;
-                        addAlert(alert, "#header");
-                      })  
-                      .catch((err) => {
-                        console.log("An error occured while contacting the API:", err);
-                        let alert = `<div id="alert" class="alert alert-danger" role="alert">
-                                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-                                      ${err.message}
-                                    </div>`;
-                        addAlert(alert, "#header");
-                      })
-                    }
-                    else 
-                      throw new Error("The <b>quantity</b> has to be a positive integer");
-                  } else 
-                    throw new Error("The <b>quantity</b> you entered is invalid");
-                } catch (err) {
-                  item.value = 1;
-                  let alert = `
-                        <div id="alert" class="alert alert-warning" role="alert">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-                            ${err.message}
-                        </div>`;
-                  addAlert(alert, "#header")
-                }
-              }
-            </script>
           </div>
       </div>
       <% }) %>
@@ -189,8 +112,7 @@
 
 
 <script>
-/* this function handle the payment by stripe */
-let stripeHandler = StripeCheckout.configure({
+  let stripeHandler = StripeCheckout.configure({
   key: stripePublicKey,
   locale: "auto",
   token: function (token) {
@@ -227,49 +149,7 @@ function submitCheckout () {
   let isLogged = "<%= locals.name %>";
   let isDelivery = "<%= locals.isDelivery %>";
 
-  if (isLogged === "") {
-    window.location.href= "http://localhost:8089/Login"; //need req message
-  } else {
-    if (isDelivery === "true") {
-      // fetch total price from API
-      fetch('/api/cart/totalprice', {
-      method: 'GET',
-      headers: {
-        'Content-Type': 'application/json',
-        'Accept': 'application/json'
-      }
-    })
-    .then((res) => {return res.json()})
-    .then((data) => {
-      console.log(data);
-      if (data.err === false) {
-        let price = Math.round(parseFloat(data.total) * 100); //stripe amount is in cents
-        if (price != 0) {
-          stripeHandler.open({
-            amount: price,
-            currency: "eur"
-          })
-        }
-      } else {
-        console.log("Something went wrong while fetching your cart items!");
-        throw new Error(data.msg)
-      }
-    })
-    .catch((err) => {
-      let alert = `<div id="alert" class="alert alert-info" role="alert">
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-                        ${err.message}
-                    </div>`;
-      addAlert(alert, "#header");
-    })
-    } else {
-      let alert = `<div id="alert" class="alert alert-info" role="alert">
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-                        You need to fill your delivery informations <a href="/User">here</a> in order to be able to purchase!
-                    </div>`;
-      addAlert(alert, "#header");
-    }
-  }
+  checkoutCaller(isLogged, isDelivery);
 }
 </script>
   
