filled database with actual dummy but decent data, can now delete blog's main image, enhanced galerie search by tags, added infinite loading to tag search, fixed tag behavior, other minor bugfixes..

--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -6,7 +6,7 @@
     <% Object.keys(locals.blogs).forEach(function (index) { %>
       <div class="row blog-row" id="<%= locals.blogs[index]._id %>">
         <div class="col-8 offset-2">
-          <h3 class="blog-title"><a href="Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].title %></a></h3> 
+          <h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].title %></a></h3> 
           <% if (locals.blogs[index].mainImgId) { %>
             <img src="/api/image/<%= locals.blogs[index].mainImgId %>">
           <% } %>
