--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<script src="/scripts/gallery/infiniteGalleriesTags.js"></script>
+<script src="/scripts/gallery/infiniteTags.js"></script>
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 <script src="/scripts/cart.js"></script>
 <div class="container">
@@ -34,7 +34,7 @@
           <% } %>
     </div>
     <div class="col-6 offset-3 mb-3 mt-3">
-      <input type="submit" class="logbtn" value="Load more" onclick="infiniteGalleriesTags();">
+      <input type="submit" class="logbtn" value="Load more" onclick="infiniteTags();">
     </div>
 </div>
 
