--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -18,9 +18,9 @@
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
                         <img id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
-                        <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
+                        <div id="actDiv<%= item._id %>" class="action-div">
                             <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
-                            <a id="sel<%= item._id %>" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Blog/<%= locals.blogContent.id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
+                            <a id="sel<%= item._id %>" class="select-main" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Blog/<%= locals.blogContent.id %>/<%= item._id %>" <% if (item.isMain === true) { %>style="display:none"<% } %>><i class="fas fa-star"></i></a>
                         </div>
                     <% }) %>
                 <% } %>
