--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -54,6 +54,7 @@
           </div>
       </div>
       <div class="col-6 offset-3 mb-3 mt-3">
+        <img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none">
         <input id="load" type="submit" class="logbtn" value="Load more" onclick="infiniteShopItems('original');">
       </div>
     </div>
