redesigned social media buttons

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,13 +2,14 @@
             <div class="footer-links col-md-12 mb-md-0">
               <ul class="footer-list">
                 <li>
-                  <a href="#!"><img class="footer-logo"  src="/svg/instagram.svg" alt="instagram-logo"/></a>
+                  <!--<a href="#!"><img class="footer-logo"  src="/svg/instagram.svg" alt="instagram-logo"/></a>-->
+                  <a href="#!" class="social-btn"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                  <a href="#!"><img class="footer-logo" src="/svg/facebook.svg" alt="facebook-logo"/></a>
+                  <a href="#!" class="social-btn"><i class="fab fa-facebook-f"></i></a>
                 </li>
                 <li>
-                  <a href="#!"><img class="footer-logo" src="/svg/pinterest.svg" alt="pinterest-logo"/></a>
+                  <a href="#!" class="social-btn"><i class="fab fa-pinterest-p"></i></a>
                 </li>
 
               </ul>
