--- a/public/style.css
+++ b/public/style.css
@@ -230,8 +230,66 @@ footer {
 }
 
 .footer-logo {
-width: 40px;
-height: 40px;
+  width: 40px;
+  height: 40px;
+}
+
+
+
+.social-btn {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background: #f1f1f1;
+  margin: 10px;
+  border-radius: 30%;
+  box-shadow: 0 5px 30px -3px #465775;
+  color: #3498db;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+
+.social-btn i {
+  color: #3498db;
+  line-height: 40px;
+  font-size: 26px;
+  transition: 0.2s linear;
+}
+
+.social-btn:hover i {
+  transform: scale(1.3);
+  color: #465775;
+}
+
+.social-btn::before{
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: #3498db;
+  transform: rotate(45deg);
+  left: -110%;
+  top: 90%;
+}
+
+.social-btn:hover::before {
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
+}
+
+@keyframes aaa {
+  0%{
+    left: -110%;
+    top: 90%;
+  }50%{
+    left: 10%;
+    top: -30%;
+  }100%{
+    top: -10%;
+    left: -10%;
+  }
 }
 
 /* END FOOTER */
